# IREC-26-Payload

./: .clang-format  .dockerignore  .gitignore  .gitmodules  BRANCH_NOTES.md  Dockerfile  Dockerfile.deploy  FABLE_BUGFIXES.md  Justfile  Makefile  README.md  config.json  deploy.sh  docker-compose.yml  docker_entrypoint.sh  local_installer.sh  start.sh  telem.db3
.github/workflows/: build.yml
fs_example/: README.md
fs_example/0/: expected  landed
fs_example/0/commands/0/: date  stdout
fs_example/0/images/0/: parameters
fs_example/0/images/0/transmission/: README.md
fs_example/0/radio/received/0/: date  packet
fs_example/0/radio/sent/0/: packet
msgs/shell/: exec.msg  read_output_request.msg  read_output_response.msg
radio/: CMakeLists.txt  common.h  lora.h  main.cpp  packets_g2p.h  packets_p2g.h
ros_ws/fs_example/: README.md
ros_ws/fs_example/0/: launched
ros_ws/fs_example/0/images/0/: actuators  camera_settings  date  position  uptime
ros_ws/fs_example/0/radio/received/0/: packet
ros_ws/fs_example/0/radio/sent/0/: date  settings
ros_ws/fs_example/0/videos/0/: date  uptime
ros_ws/msgs/shell/: exec_return_data.msg
ros_ws/radio/: CMakeLists.txt  common.h  fuzz_test.cpp  lora.c  lora.h  packets_g2p.h  packets_p2g.h  read_cmd_packet_from_file.cpp  write_packet_from_args.cpp
src/cubesat_bringup/: CMakeLists.txt  package.xml
src/cubesat_bringup/config/: captain.yaml  pi_zero.yaml  radio.yaml  stm_bridge.yaml  watch.yaml
src/cubesat_bringup/launch/: bench.launch.py  flight.launch.py  radio_only.launch.py  sensors_only.launch.py
src/cubesat_bringup/scripts/: atlas-flight.service  flight_boot.sh  start_flight.py
src/cubesat_bringup/systemd/: atlas-flight.service
src/cubesat_captain/: CMakeLists.txt  package.xml
src/cubesat_captain/cubesat_comms/: CMakeLists.txt  lora.c  packets_g2p.c  packets_p2g.c
src/cubesat_captain/cubesat_comms/include/cubesat_comms/: common.h  lora.h  lora.h.orig  packets.h  packets_g2p.h  packets_p2g.h
src/cubesat_captain/include/cubesat_captain/: autonomous_experts.hpp  captain_node.hpp  common.hpp  expert.hpp  flight_expert.hpp  flipping_expert.hpp  flipping_state.hpp  manual_expert.hpp  packet_writer.hpp  pad_expert.hpp  pad_state.hpp  status_accumulator.hpp
src/cubesat_captain/src/: autonomous_experts.cpp  captain_comms.cpp  captain_node.cpp  flight_expert.cpp  flipping_expert.cpp  flipping_state.cpp  main.cpp  manual_expert.cpp  packet_writer.cpp  pad_expert.cpp  pad_state.cpp  status_accumulator.cpp
src/cubesat_flight_logger/: CMakeLists.txt  package.xml
src/cubesat_flight_logger/include/cubesat_flight_logger/: flight_logger.hpp
src/cubesat_flight_logger/src/: flight_logger.cpp  flight_logger_node.cpp
src/cubesat_msgs/: CMakeLists.txt  package.xml
src/cubesat_msgs/action/: CapturePanorama.action  ExtendArm.action  FlipServoAction.action  FlipVehicle.action  JogMotor.action
src/cubesat_msgs/msg/: AccelSample.msg  ArmJoint.msg  ArmState.msg  ArmStatus.msg  BoostEvent.msg  FlightState.msg  FlipServo.msg  GpsSample.msg  ImageMetadata.msg  ImageRequest.msg  LoraParameters.msg  PayloadOrientation.msg  PowerSample.msg  RadioPacket.msg  RadioState.msg  SystemHealth.msg  TelemetryType.msg
src/cubesat_msgs/srv/: GetImageBlock.srv  HoldShut.srv  JogMotor.srv  MoveServoRamp.srv  RequestStateChange.srv  SetBuzzer.srv  SetFlightFolder.srv  SetServoPosition.srv  StartNewFlight.srv  TelemetryRequest.srv  TransmitImageBlocks.srv  ZeroArm.srv
src/cubesat_pi_io/: CMakeLists.txt  package.xml
src/cubesat_pi_io/config/: pi_io.yaml
src/cubesat_pi_io/include/cubesat_pi_io/: buzzer_driver.hpp  gps_nmea_reader.hpp  ina260_driver.hpp  lis3dh_driver.hpp  pi_io_node.hpp
src/cubesat_pi_io/nmea/: CMakeLists.txt
src/cubesat_pi_io/nmea/include/nmea/: field.hpp  sentence.hpp
src/cubesat_pi_io/nmea/include/nmea/message/: gga.hpp  gll.hpp  gsa.hpp  gsv.hpp  rmc.hpp  vtg.hpp  zda.hpp
src/cubesat_pi_io/nmea/include/nmea/object/: date.hpp  mode.hpp  status.hpp
src/cubesat_pi_io/nmea/src/: gga.cpp  gll.cpp  gsa.cpp  gsv.cpp  parse.cpp  parse.hpp  rmc.cpp  sentence.cpp  vtg.cpp  zda.cpp
src/cubesat_pi_io/src/: buzzer_driver.cpp  gps_nmea_reader.cpp  ina260_driver.cpp  lis3dh_driver.cpp  main.cpp  pi_io_node.cpp
src/cubesat_radio/: CMakeLists.txt  package.xml
src/cubesat_radio/config/: radio.yaml
src/cubesat_radio/include/cubesat_radio/: radio_node.hpp  radio_profile.hpp  radio_types.hpp  sx1262_radio.hpp
src/cubesat_radio/linux_hal/: sx126x_linux_hal.cpp  sx126x_linux_hal.hpp
src/cubesat_radio/semtech/: CMakeLists.txt
src/cubesat_radio/semtech/src/: sx126x_lr_fhss.c
src/cubesat_radio/src/: main.cpp  radio_node.cpp  sx1262_radio.cpp
src/cubesat_stm_bridge/: CMakeLists.txt  package.xml
src/cubesat_stm_bridge/include/cubesat_stm_bridge/: crashout_stm.hpp  stm_bridge_node.hpp  stm_data.hpp
src/cubesat_stm_bridge/src/: crashout_stm.cpp  main.cpp  stm_bridge_node.cpp
src/cubesat_watch/: CMakeLists.txt  package.xml
src/cubesat_watch/include/image_handler/: ImageHandlerNode.hpp  ImageTaker.hpp
src/cubesat_watch/src/: ImageHandlerNode.cpp  ImageTaker.cpp  main.cpp
src/nmea_listener/: CMakeLists.txt  package.xml
src/nmea_listener/include/nmea_listener/: NmeaListenerNode.hpp
src/nmea_listener/launch/: nmea_listener.launch.py
src/nmea_listener/src/: NmeaListenerNode.cpp  main.cpp
src/radio_transceiver/: CMakeLists.txt  package.xml
src/radio_transceiver/include/radio_transceiver/: RadioTransceiverNode.hpp
src/radio_transceiver/launch/: radio_transceiver.launch.py
src/radio_transceiver/src/: RadioTransceiverNode.cpp  main.cpp  sx126xHal.cpp
src/sensor_reader/: CMakeLists.txt  package.xml
src/sensor_reader/include/sensor_reader/: SensorReaderNode.hpp  adxl375.hpp  ina260.hpp
src/sensor_reader/launch/: sensor_reader.launch.py
src/sensor_reader/src/: SensorReaderNode.cpp  adxl375.cpp  ina260.cpp  main.cpp
tools/: decode_flight_log.py
workspace/src/cubesat_stm_bridge/src/: stm_bridge_node.cpp
