<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cubesat_stm_bridge</name>
  <version>0.1.0</version>
  <description>Raspberry Pi to STM32 Communication</description>
  <maintainer email="launchinitiative@rit.edu">Launch Initiative Avionics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cubesat_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
