<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cubesat_watch</name>
  <version>0.0.0</version>
  <description>Handles camera input and image processing</description>
  <maintainer email="amc9897@rit.edu">Aaron Chan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <depend>cubesat_msgs</depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>arm_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
